# ai-harness

./: .gitignore  README.md  RELEASES.md  pyproject.toml  sitecustomize.py
.github/workflows/: validate.yml
.harness/: HARNESS_CARD.yaml  security_policy.yaml  severity_map.yaml
.harness/checks/: _common.py  backend_async_correctness.py  backend_db_layer.py  backend_validation_contracts.py  conventions_policy.py  dependency_policy.py  frontend_data_layer.py  logging_policy.py  output_format_conformance.py  rule_count_conformance.py  security_policy_a.py  security_policy_b.py  typecheck_policy.py
.harness/checks/go-backend/: CONTRIBUTING.md  _go_common.py  go_db_quarantine.py  go_error_handling.py  go_http_wrapper.py
.harness/checks/node-backend/: CONTRIBUTING.md  _node_common.py  _ts_parser.py  node_async_correctness.py  node_db_layer.py  node_dependency_policy.py  node_logging.py  node_security_routes.py  node_storage_isolation.py  node_testing.py  node_validation_contracts.py
.harness/checks/rust-backend/: CONTRIBUTING.md  _rust_common.py  rust_db_quarantine.py  rust_error_handling.py  rust_http_wrapper.py
.harness/profiles/: _README.md  go-only.yaml  minimal.yaml  node-only.yaml  node-react.yaml  python-only.yaml  python-react.yaml  react-only.yaml  rust-only.yaml
.harness/schemas/: profile.schema.json  security_policy.schema.json  severity_map.schema.json
docs/: EXIT_CODES.md  SUPPORTED_PLATFORMS.md  UPGRADE.md
docs/decisions/: 2026-04-29-node-ast-parser.md
docs/plans/: 2026-04-29-harness-v2.0-production-roadmap.md
tests/harness/: test_auto_fix.py  test_cli_subcommands.py  test_dependency_policy_stdlib.py  test_first_commit_banner.py  test_harness_cli.py  test_harness_init.py  test_harness_init_node_detection.py  test_import_tracker.py  test_is_logger_call.py  test_migration_v1_to_v2.py  test_no_silent_swallow.py  test_observability.py  test_output_formatter.py  test_profiles.py  test_session_status_line.py  test_severity_map_completeness.py  test_stack_detector.py
tests/harness/checks/: test_backend_async_correctness.py  test_backend_db_layer.py  test_conventions_policy.py  test_go_backend_pack.py  test_node_backend_pack.py  test_rule_count_conformance.py  test_rust_backend_pack.py  test_security_policy_a.py  test_security_policy_b.py
tests/harness/fixtures/backend_async_correctness/compliant/: wrapper_imports_requests.py
tests/harness/regression/: _INDEX.md  __init__.py  test_v1_0_x_audit_b1_b6.py  test_v1_1_0_audit_b7_b10.py  test_v1_2_0_audit_b11_b18.py  test_v1_2_1_audit_b19_b27.py  test_v1_3_0_audit_rule_semantics.py
tools/: auto_fix.py  harness_cli.py  load_harness.py  observability.py  output_formatter.py  profiles.py  run_validate.py  stack_detector.py
tools/cli/: __init__.py  baseline.py  check.py  doctor.py  fix.py  init.py  rules.py  telemetry.py  upgrade.py
tools/init_harness_templates/: RELEASES.md
tools/migrations/: v1_to_v2.py
tools/perf/: measure_wallclock.py  mutation_baseline.txt  node_parser_bench.py  wallclock_baseline.txt
(+78 files in other folders)
